# WFA

Translator/: CMakeGroupSources.txt  CMakeLists.txt
Translator/Pages/: CreateUser.html  Home.html  Home.htmt  Link.txt  Login.html  Login_Result.htmt  Logout_Result.htmt  Register.html  SearchUsersInput.html  SearchUsersResult.htmt  Test.html  style.css  testForward.htmt
Translator/Pages/Parts/Groups/: AddGroupResult.htmt  AddGroupToPart.htmt  AddGroupToPartResult.htmt  ManageGroups.htmt  ModifyGroup.htmt  ModifyGroupResult.htmt
Translator/Pages/Parts/Parts/: AddPart.htmt  AddPartResult.htmt  AddPartToGroup.htmt  AddPartToGroupResult.htmt  ManageParts.htmt  ManageSuppliers.htmt  (+4 more)
Translator/Pages/Services/: addPartToService.htmt  addPartToServiceResult.htmt  authoriseService.htmt  authoriseServiceResult.htmt  closeService.htmt  closeServiceResult.htmt  createService.htmt  createServiceResult.htmt  listAuthorisedServices.htmt  listUnauthorisedServices.htmt  modifyAuthorisedService.htmt  modifyAuthorisedServiceResult.htmt  removePartFromService.htmt  removePartFromServiceResult.htmt  viewAuthorisedService.htmt  viewClosedService.htmt  viewServices.htmt
Translator/Pages/Users/: AddUser.htmt  AddUserResult.htmt  DeleteUserResult.htmt  ManageUsers.htmt  ModifyUser.htmt  ModifyUserResult.htmt
Translator/Pages/Vehicles/: AddVehicle.htmt  AddVehicleResult.htmt  ManageLocalVehicles.htmt  ModifyVehicle.htmt  ModifyVehicleResult.htmt  RemoveVehicleResult.htmt
Translator/include/: CMakeLists.txt  Curl.h  Forwarding.h
Translator/src/: CMakeLists.txt  Source.cpp
(+27 files in other folders)
